A bit more CSS and some JavaScript

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Foyster</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/middle.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <script src="anim_h3.js" defer></script>
 </head>
 <body>
     <div class="header">
@@ -14,6 +17,15 @@
 
     <div class="middle">
         <div class="middleInner">
+            <h3>Introduction</h3>
+            <img  id="headShot" src="images/mugshot2.png" alt="Photo of me, quite ugly">
+            <div id="intro-div">
+            <p>Good <span id="day_time">day</span>. If you're here, you're probably interested in learning a little more about me. I have made 
+            this website precisely for that purpose.</p> 
+
+            <p>If you don't see the information you want or you would like a copy of my CV, please feel free
+            to tap the email symbol on the right hand side of the bar at the bottom and send me a message.</p>
+            </div>
             <h3>Languages</h3>
             <ul>
             <li>WEB BASED</li>
@@ -62,8 +74,8 @@
     <div class="footer"> 
         <table class="footerTable">
         <tr>
-            <td class="ftCells"><span class="jsText">Powered by:&nbsp;&nbsp;</span> <img src="images/js.png" alt="JavaScript logo" class="jsIcon"/></td>
-            <td class="ftCells">Copyright &copy; Mark Foyster April 2022</td>
+            <td class="ftCells"><span class="jsText">Powered by:&nbsp;&nbsp;</span> <span id="footerLogo" class="jsIcon"></span></td>
+            <td class="ftCells" id="ftMidText">Copyright &copy; Mark Foyster April 2022</td>
             <td class="ftCells"><a href="mailto:mxfoyster@yahoo.co.uk" class="email"><img src="images/email.png" alt="Email logo" class="emailIcon"/></a></td>
         </tr>
         </table>>
