Popup content populated from a JSON created for easy editing of content

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 </head>
 <body>
     <div id="popUpBox">
-        <h4>Title</h4>
+        <h4 id="popUpTitle">Title</h4>
         <div id="closePopUp">X</div>
-        <p>Some info about this project and perhaps an image</p>
+        <div id="popUpImg"></div>
+        <p id="popUpText">Some info about this project and perhaps an image</p>
     </div>
     <div class="header">
         <div class="linkedInTooltip">
