More small changes to content and styling

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p><b>C#</b> with simple console apps and within Unity3D. Again, this was for a mixture of personal projects and for assessment 
                 material. I will look at more detail at some of the other parts of the <b>.NET</b> framework soon.   
                 <h4>In the past:</h4>
-                <p><b>C++</b>, mostly for fun and during a Level 2 course I did many years ago. I look forward to brushing up on this soon.</p>     
+                <p><b>C++</b>, mostly for fun and during a Level 2 course I did many years ago. I've made a small start into getting back into it recently, see my <a href="https://gist.github.com/mxfoyster/2cc38c3a0f88b54d4c9a366d12250892">GIST</a>.</p>     
                 <p><b>Pascal</b> during my College days and for a while afterwards. Mostly Borland Turbo Pascal, I had my share of fun with 
                 this language:</p> <hr>
               
