More content addition

--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                 <td class="td3Popup">RandomWinApp<span class="tableTip">Click for more info</span></td>
                 <td><a href="https://github.com/mxfoyster/randomWinApp">https://github.com/mxfoyster/randomWinApp</a></td>
             </tr>
-           
+            <td class="td3Popup">First_WPF_App<span class="tableTip">Click for more info</span></td>
+                <td><a href="https://github.com/mxfoyster/first_WPF_App">https://github.com/mxfoyster/first_WPF_App</a></td>
             </table>
 
                <p>Watch this space, more coming! Keep an eye on my <a href="https://github.com/mxfoyster/">GitHub</a> page too.</p>
