Another minor content update to index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 
                 <h4>Current:</h4>
                 <p><b>C#</b> with simple console apps and within Unity3D. Again, this was for a mixture of personal projects and for assessment 
-                material. I will look at more detail at some of the other parts of the <b>.NET</b> framework soon.   
+                material. I have made a small start with <b>.NET</b> recently with <b>WPF</b>, very basic but I will do more soon. Links below.   
                 <h4>In the past:</h4>
                 <p><b>C++</b>, mostly for fun and during a Level 2 course I did many years ago. I've made a small start into getting back into it 
                 recently, see my <a href="https://gist.github.com/mxfoyster/2cc38c3a0f88b54d4c9a366d12250892">GIST</a>. Additionally, there is a 
